fix horizontal scrollbar appearing

--- a/style.css
+++ b/style.css
@@ -33,9 +33,8 @@ body {
     overflow: hidden;
 
     width: 100%;
-    padding: 10px;
     margin: auto;
-    margin-bottom: 16px;
+    margin-bottom: 64px;
 
     display: flex;
     flex-direction: row;
